--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 prototype3/upload/2014-02-13 17-29-47/2014-01-27_Course à pied en après-midi_Running.tcx
+
+prototype3/upload/2014-02-13 17-29-47/2014-01-27_Course à pied en après-midi_Running.tcx
+
+*.tcx
